--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <link href="_include/css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Main Style -->
-<link href="/_include/css/main.css" rel="stylesheet">
+<link href="https://gt-freelance.github.io/_include/css/main.css" rel="stylesheet">
 
 <!-- Supersized -->
 <link href="_include/css/supersized.css" rel="stylesheet">
