--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <link href="include/css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Main Style -->
-<link href="main.css" rel="stylesheet">
+<link href="include/css/main.css" rel="stylesheet">
 
 <!-- Supersized -->
 <link href="include/css/supersized.css" rel="stylesheet">
